feat: AI 프리뷰 gateway 검증 및 테스트 분리